<?xml version="1.0"?>
<package format="2">
  <name>trajectories</name>
  <version>0.1.0</version>
  <description>The trajectories package</description>
  <maintainer email="kbodie@ethz.ch">Karen Bodie</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/kajabo/trajectories</url>
  <author email="kbodie@ethz.ch">Karen Bodie</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>

  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>actionlib</depend>
  
  <depend>huskanypulator_msgs</depend>
  <depend>mbzirc_mission2_msgs</depend>

</package>